--- a/spyware.html
+++ b/spyware.html
@@ -35,7 +35,7 @@ top:55%;
 </head>
 <body>
 <img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrLwlM-T9ySYtCiJlkucS52EtIiZcZyAOldw&usqp=CAU"></img>
-<a href="https://dixitmanav5.github.io/security/sequrity.html" >
+<a href="https://dixitmanav5.github.io/virus/virus.html" >
 <input id="back"type="image" src="https://cdn1.iconfinder.com/data/icons/ios-11-ui-elements/29/26_back_left_arrow_navigation_sign-512.png">
 </a>
 <br><br>
